<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/newsfeed_outline_112"
        android:title="@string/title_main" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/message_outline_112"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notification_outline_112"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/statistics_outline_112"
        android:title="@string/title_stats" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings_outline_112"
        android:title="@string/title_settings" />

</menu>